--- a/index.css
+++ b/index.css
@@ -14,7 +14,12 @@ body {
 .container {
     width: 500px;
     margin: 0 auto;
-    
+    display: grid;
+    gap: 50px;
+    align-items: flex-start;
+    grid-template-areas: 
+    'game score'
+    'game next';
 }
 
 .game-area {
